Fix text visibility on mobile by enforcing black text on white backgrounds

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -48,6 +48,7 @@
 
 body {
   background-color: #ffffff;
+  color: #000;
   background-image:
     /* Black Grid Lines */
     linear-gradient(#000 4px, transparent 4px),
@@ -84,6 +85,7 @@ body {
 /* Ensure content is readable on top of the art */
 .masthead {
     background-color: #fff;
+    color: #000;
     border-bottom: 4px solid #000;
     position: relative;
     z-index: 100;
@@ -91,6 +93,7 @@ body {
 
 #main {
     background-color: #fff;
+    color: #000;
     padding: 2em;
     border: 4px solid #000;
     margin-top: 2em;
@@ -104,6 +107,7 @@ body {
 
 .page__footer {
     background-color: #fff;
+    color: #000;
     border-top: 4px solid #000;
     padding-top: 2em;
     position: relative;
@@ -117,3 +121,9 @@ body {
         padding: 1em;
     }
 }
+
+/* Force navigation links to be black on the white masthead */
+.greedy-nav a {
+    color: #000 !important;
+}
+
